--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
@@ -9,13 +9,12 @@
     <title> 💵 My Code Bank 😄 </title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-
-  </head>
+</head>
 
 <body>
     <main class="container">
         <div>
-            <!-- PANEL INICIO SESION -->
+            <!-- Login Panel-->
             <section id="inicioDeSesion" class="visible cajacentro container">
                 <div class="padre container">
                     <h1> 💵 My Code Bank </h1>
@@ -28,7 +27,7 @@
                     </div>
                 </div>
             </section>
-            <!-- PANEL INICIO OPERACIONES CAJERO -->
+            <!-- Starting operations -->
             <section id="inicioOperaciones" class="invisible cajacentro container">
                 <div class="padre container">
                     <h1> 💵 My Code Bank </h1>
