--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
     <script defer src="atm.js"></script>
 
-    <title> 💵 My Code Bank 😄 </title>
+    <title> 💵 My Code Bank </title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
@@ -93,8 +93,8 @@
         </div>
     </main>
     <footer class="container">
-        <h6> Thanks for using 💵 My Code Bank </h6>
-
+        <h6> Thanks for using 💵 My Code Bank, this project was coded by 
+            <a href="https://www.linkedin.com/in/laura-carrillo21/"> Lau Carrillo </a> </h6>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
