update css features

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
                 <div class="padre container">
                     <h1> 💵 My Code Bank </h1>
                     <div class="hijo container">
-                        <label for="usuario">User</label>
+                        <label for="usuario" class="label">User</label>
                         <input id="usuario" type="text" name="usuario">
-                        <label for="contrasena">Password</label>
+                        <label for="contrasena" class="label">Password</label>
                         <input id="contrasena" type="password" name="contrasena">
-                        <button onclick="iniciarSesion()" class="btn btn-outline-info"> Login </button>
+                        <button onclick="iniciarSesion()" class="btn btn-outline-info login"> Login </button>
                     </div>
                 </div>
             </section>
